Fixed up the "squiddy" command, and added the "kwispy" command.

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <title>Chat App</title>
 </head>
 <body>
+    <h1 id="t">Chatty | Main</h1>
     <h6><span>&copy</span> Copyright, Norwegian Ball Waffles Inc., 2024</h6>
     
     <div id="messages">
